# policy-gradient-experiments

./: .gitattributes  .gitignore  .md  CLAUDE.md  CLAUDE_gsm8k.md  README.md  SETUP.md  eval_gsm8k.py  grpo_notes.md  grpo_will.py  pyproject.toml  setup.sh  tatus  utils.py  vllm_utils.py
evaluations_gsm8k/20250731_220000_base-model-compiled_b512/: metadata.json  results.csv  summary.txt
evaluations_gsm8k/20250801_214648_checkpoint-700_b512/: metadata.json  results.csv  summary.txt
evaluations_gsm8k/20250801_215114_checkpoint-700_b512/: metadata.json  results.csv  summary.txt
evaluations_gsm8k/20250801_220015_Qwen-Qwen2.5-0.5B-Instruct_b512/: metadata.json  results.csv  summary.txt
experiments/: __init__.py
experiments/baseline/: baseline_eval.py
experiments/ei/: config_schema.py  ei_train.py
experiments/ei/configs/: ei_g16_b2048_e1.yaml  ei_g4_b512_e2.yaml  ei_g8_b1024_e2.yaml  ei_g8_b1024_e3.yaml
experiments/grpo/: __init__.py  config_schema.py  grpo_train.py  grpo_utils.py
experiments/grpo/configs/: grpo_clip.yaml  grpo_default.yaml  grpo_test.yaml
experiments/sft/: config_schema.py  filter_correct_sft.py  sft_train.py  sft_utils.py
experiments/sft/configs/: base.yaml  sft_correct_full.yaml  unique_1024.yaml  unique_128.yaml  unique_256.yaml  unique_512.yaml  unique_full.yaml
gsm8k/: README.md  eval_utils.py
scripts/: setup_env.sh  setup_wandb.sh
sft_output/: config.json  generation_config.json  model.safetensors.zst
utils/: __init__.py  config_base.py  drgrpo_grader.py  inference_utils.py  math_data.py  memory_utils.py  model_utils.py  optim_sched_utils.py  training_utils.py  vllm_utils.py
