[project]
name = "policy-gradient-experiments"
version = "0.1.0"
description = "Collection of policy gradient and reinforcement learning experiments for various domains"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "torch>=2.6",
    "transformers>=4.51.0",
    "trl<0.20",
    "peft<0.16",
    "vllm>=0.10.0",
    "wandb>=0.21.0",
    "matplotlib>=3.10.3",
    "latex2sympy2-extended",
    "math-verify",
    "pylatexenc",
    "sympy",
    "PyYAML>=6.0.2",
    "pytest>=8.4.1",
    "flash-attn>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
]

[tool.uv]
# Flash Attention requires special build configuration
no-build-isolation-package = ["flash-attn"]
