[project]
name = "policy-gradient-experiments"
version = "0.1.0"
description = "Collection of policy gradient and reinforcement learning experiments for various domains"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "transformers>=4.51.0",
    "trl<0.20",
    "peft<0.16",
    "wandb>=0.21.0",
    "matplotlib>=3.10.3",
    "latex2sympy2-extended",
    "math-verify",
    "pylatexenc",
    "sympy",
    "PyYAML>=6.0.2",
    "pytest>=8.4.1",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "black>=24.8.0",
    "pre-commit>=3.7.1",
]


[tool.black]
# Keep config minimal; align with Python 3.11 used in this project
target-version = ["py311"]
line-length = 100

